charts/envoy-gateway/backend-traffic-policies.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
  namespace: networking
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  compression:
    - type: Brotli
    - type: Gzip
    - type: Zstd
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
